--- a/ProjectWeek/src/main/AndroidManifest.xml
+++ b/ProjectWeek/src/main/AndroidManifest.xml
@@ -19,13 +19,21 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.example.projectweek.ManageActivity"
+            android:name="com.example.projectweek.ConnexionActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".SignupActivity"
+            android:label="@string/app_name">
+            <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -46,13 +54,13 @@
             </intent-filter>
         </activity>
 
-        <!--<activity-->
-            <!--android:name=".ManageActivity"-->
-            <!--android:label="@string/app_name">-->
-            <!--<intent-filter>-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
+        <activity
+            android:name=".ManageActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".QuestionnaireActivity"
