--- a/ProjectWeek/src/main/AndroidManifest.xml
+++ b/ProjectWeek/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity
             android:name="com.example.projectweek.ConnexionActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
