--- a/ProjectWeek/src/main/AndroidManifest.xml
+++ b/ProjectWeek/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.example.projectweek.ConnexionActivity"
+            android:name="com.example.projectweek.ManageActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="">
             <intent-filter>
@@ -72,7 +72,7 @@
         </activity>
 
         <activity
-            android:name=".ManageActivity"
+            android:name=".ConnexionActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
